Cleaned up code, started working on server

--- a/Test Game/index.html
+++ b/Test Game/index.html
@@ -13,13 +13,13 @@
             height: 100vh;
         }
         #gameCanvas {
-            border: 1px solid black; /* Add a border for better visualization */
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas" width="900" height="700"></canvas>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="game.js"></script>
+    <script src="./client/game.js" type="module"></script>
 </body>
 </html>
