--- a/Game/index.html
+++ b/Game/index.html
@@ -21,5 +21,6 @@
     <canvas id="gameCanvas" width="900" height="700"></canvas>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./client/game.js" type="module"></script>
+    <script src="./client/helper.js" type="module"></script>
 </body>
 </html>
