--- a/Game/index.html
+++ b/Game/index.html
@@ -2,25 +2,105 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <style>
         body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: rgb(0, 0, 131);
         }
-        #gameCanvas {
-            border: 1px solid black;
+
+        h1 {
+            color:white;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color:white;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .main-menu {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 50px;
+            background-color: rgb(4, 4, 146);
+        }
+
+        #container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 10px solid black; /* Adjust border size as needed */
+            box-sizing: border-box;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        button {
+            margin: 10px;
+            padding: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            background-color: rgb(0, 0, 131);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            text-align: center;
+        }
+
+        button:hover {
+            background-color: #1c069e;
+        }
+
+        .high-score-list li {
+            color:white;
+        }
+        .controlInput {
+            font-size: 16px;
+            padding: 5px 10px;
+            margin-bottom: 10px;
+            width: 150px;
         }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="900" height="700"></canvas>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./client/game.js" type="module"></script>
-    <script src="./client/helper.js" type="module"></script>
+    <div class="main-menu" id="menu">
+        <h1>SNAKE!</h1>
+        <button onClick="newGame()">New Game</button>
+        <button onClick="toggle('menu', 'high-scores')" id='highscore-button'>High Scores</button>
+        <button onClick="toggle('menu', 'controls')">Change Controls</button>
+        <button onClick="toggle('menu', 'credits')">Credits</button>
+    </div>
+    <div class="main-menu" id="high-scores" style="display:none">
+        <h1>Top 5 Scores</h1>
+        <button onClick="toggle('high-scores', 'menu')">Back</button>
+    </div>
+    <div class="main-menu" id="controls" style="display:none">
+        <h1>Change Controls</h1>
+        <p for="leftControl">Left Control:</p>
+        <input type="text" id="leftControl" class="controlInput" readonly>
+        <button id="changeLeftControl">Change Left Control</button>
+    
+        <p for="rightControl">Right Control:</p>
+        <input type="text" id="rightControl" class="controlInput" readonly>
+        <button id="changeRightControl">Change Right Control</button>
+    
+        <button id="saveButton">Save Controls</button>
+        <button onClick="toggle('controls', 'menu')">Back</button>
+    </div>
+    <div class="main-menu" id="credits" style="display:none">
+        <h1>Game made by Benson Shafer and Thomas Nelson</h1>
+        <button onClick="toggle('credits', 'menu')">Back</button>
+    </div>
+    <script src="./client/menu.js"></script>
 </body>
 </html>
